Add additional JVM args to ArrowFormatIT (#2298)
Add additional JVM args to ArrowFormatIT